Revert "fix(dialog): dialogs that hit max-width not centered on IE (#8055)" (#9430)
This reverts commit 65b63bb54501c91b9a1bc4656374d47c6c9a58ba.

--- a/src/cdk/overlay/_overlay.scss
+++ b/src/cdk/overlay/_overlay.scss
@@ -39,9 +39,6 @@ $backdrop-animation-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1) !default;
     display: flex;
     position: absolute;
     z-index: $cdk-z-index-overlay;
-
-    // Fixes issues where overlays are centered on IE when they hit the max-width.
-    flex-direction: column;
   }
 
   // A single overlay pane.
